# python-ci-pipeline-demo

./: .bandit  .flake8  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.md
.github/workflows/: badges.yml  ci-old.yml.backup  ci.yml  codeql-analysis.yml  dependency-review.yml  performance-tracking.yml
scripts/: format.sh  lint.sh  warm-cache.sh
src/: __init__.py  calculator.py  utils.py
tests/: test_benchmarks.py  test_calculator.py  test_utils.py
